WD_PS1 task3 deleted <p></p>

--- a/WD_PS1/Task3/index.html
+++ b/WD_PS1/Task3/index.html
@@ -29,8 +29,8 @@
             <div class="column_left">
                 <img src="img/phone_for_task3.png" alt="image of phone" class="image"></div>
             <div class="column_right">
-                <div><span><p><a href="#"
-                                 class="top_content_header"><b> Our awesome app is ready to use!</b></a></p></span>
+                <div><span><a href="#"
+                              class="top_content_header"><b> Our awesome app is ready to use!</b></a></span>
                 </div>
                 <div><span><a href="#" class="top_content"> Loren ipsum dolor sit amet, consectetur adipisicing elit. Pariatur vero
             laboriosam adipisci dolores aut blanditiis neccesitatibus invertore, eius fuga porro recusandae
@@ -41,9 +41,8 @@
         <div class="content_center" id="tab2">
             <div class="column">
                 <i class="fa fa-code fa-5x"></i>
-                <p><span><a href="#" class="content_header"></p>
-                <b> Web development</b>
-                <p></a> </span></p>
+                <p><a href="#" class="content_header">
+                    <b> Web development</b></a></p>
                 <span><a href="#" class="column_content">
                     Loren ipsum dolor sit amet, consectetur adipisicing elit. Nobis nostrum
                 suscipit vel ipsa fugiat tempore molestiae error autem architecto eum, natus, voluplatum
@@ -51,9 +50,8 @@
             </div>
             <div class="column">
                 <i class="fa fa-android fa-5x"></i>
-                <p><span><a href="#" class="content_header"></p>
-                <b> Mobile development</b>
-                <p> </a></span></p>
+                <p><a href="#" class="content_header">
+                    <b> Mobile development</b></a></p>
                 <span><a href="#" class="column_content">
                     Loren ipsum dolor sit amet, consectetur adipisicing elit. Nobis nostrum
                 suscipit vel ipsa fugiat tempore molestiae error autem architecto eum, natus, voluplatum
@@ -61,9 +59,8 @@
             </div>
             <div class="column">
                 <i class="fa fa-cloud fa-5x"></i>
-                <p><span><a href="#" class="content_header"></p>
-                <b> Hightload</b>
-                <p></a></span></p>
+                <p><a href="#" class="content_header">
+                    <b> Hightload</b></a></p>
                 <span><a href="#" class="column_content">
                     Loren ipsum dolor sit amet, consectetur adipisicing elit. Nobis nostrum
                 suscipit vel ipsa fugiat tempore molestiae error autem architecto eum, natus, voluplatum
