WD_PS1 task3 formatted image, made the transition through the menu items

--- a/WD_PS1/Task3/index.html
+++ b/WD_PS1/Task3/index.html
@@ -17,9 +17,9 @@
         <div class="column_Right">
             <nav class="topMenuRight">
                 <ul>
-                    <li><a href="#" title="tab1">CONTACT US</a></li>
-                    <li><a href="#" title="tab2">ABOUT US</a></li>
-                    <li><a href="#" title="tab3">PRODUCTS</a></li>
+                    <li><a href="#tab3" title="tab3">CONTACT US</a></li>
+                    <li><a href="#tab2" title="tab2">ABOUT US</a></li>
+                    <li><a href="#tab1" title="tab1">PRODUCTS</a></li>
                 </ul>
             </nav>
         </div>
