WD_PS1 task3 added input type "tel", "email", deleted <br>

--- a/WD_PS1/Task3/index.html
+++ b/WD_PS1/Task3/index.html
@@ -72,10 +72,10 @@
                 <h2><b> Contact us! </b></h2>
                 <form class="feedback_form">
                     <input type="text" name="name" placeholder="Type here your name, please" class="myInput">
-                    <br><input type="text" name="email" placeholder="Type here your email, please" class="myInput">
-                    <br><input type="text" name="phone" placeholder="Type here your phone, please" class="myInput">
-                    <br><textarea name="question" placeholder="Ask your question" class="myQuestion"></textarea>
-                    <br><input class="button_submit" type="submit" value="Send email!">
+                    <input type="email" name="email" placeholder="Type here your email, please" class="myInput">
+                    <input type="tel" name="phone" placeholder="Type here your phone, please" class="myInput">
+                    <textarea name="question" placeholder="Ask your question" class="myQuestion"></textarea>
+                    <input class="button_submit" type="submit" value="Send email!">
                 </form>
             </div>
         </div>
