Got added font family EB Garamond, Open Sans, added and formatted background image, checked  justify-content: center

--- a/GoT/index.html
+++ b/GoT/index.html
@@ -9,17 +9,15 @@
 </head>
 <body>
 <div class="wrapper">
-    <div class="column"><img src="img/maxresdefault.jpg" alt="image_logo" class="image">
-    </div>
+    <div class="column"></div>
     <div class="column">
-        <div class="title"><h1>game of trones</h1></div>
+        <div class="title"><h3>game of trones</h3></div>
         <form class="menu_of_game">
             <div class="font_of_menu">Enter your email</div>
             <div class="input">
                 <input type="email" name="email" placeholder="arya@westeros.com"
                        class="input_username"/>
             </div>
-            <p></p>
             <div class="font_of_menu">Choose secure password</div>
             <div class="font_of_submenu">Must be at least 8 characters</div>
             <div class="input">
@@ -27,33 +25,33 @@
                        class="input_username"/>
             </div>
             <label class="container">Remember me
-                <input type="checkbox" checked="remember">
+                <input checked="remember" type="checkbox">
                 <span class="checkbox"></span>
             </label>
             <input type="submit" class="save" value="Sign Up"/>
         </form>
-<!--                <form class="menu_of_game">-->
-<!--                    <div class="sub_title"><p>You've succesfully joined the game</p>-->
-<!--                        <p>Tell us more about yourself.</p></div>-->
-<!--                    <div class="font_of_menu">Who are you?</div>-->
-<!--                    <div class="font_of_submenu">Alpha-numeric username</div>-->
-<!--                    <div class="input"><input type="text" name="username" placeholder="arya" class="input_username">-->
-<!--                    </div>-->
-<!--                    <p></p>-->
-<!--                    <div class="font_of_menu">You Great House</div>-->
-<!--                    <div class="select">-->
-<!--                        <select type="text" name="user_house" class="select_house">-->
-<!--                            <option>Select House</option>-->
-<!--                        </select>-->
-<!--                    </div>-->
-<!--                    <p></p>-->
-<!--                    <div class="font_of_menu">You preferences, hobbies, wishes, etc.</div>-->
-<!--                    <div class="input">-->
-<!--                        <input type="text" name="your_preferences" placeholder="I have a long TOKILL list..."-->
-<!--                               class="input_username"/>-->
-<!--                    </div>-->
-<!--                    <input type="submit" class="save" value="Save"/>-->
-<!--                </form>-->
+        <!--                <form class="menu_of_game">-->
+        <!--                    <div class="sub_title"><p>You've succesfully joined the game</p>-->
+        <!--                        <p>Tell us more about yourself.</p></div>-->
+        <!--                    <div class="font_of_menu">Who are you?</div>-->
+        <!--                    <div class="font_of_submenu">Alpha-numeric username</div>-->
+        <!--                    <div class="input"><input type="text" name="username" placeholder="arya" class="input_username">-->
+        <!--                    </div>-->
+        <!--                    <p></p>-->
+        <!--                    <div class="font_of_menu">You Great House</div>-->
+        <!--                    <div class="select">-->
+        <!--                        <select type="text" name="user_house" class="select_house">-->
+        <!--                            <option>Select House</option>-->
+        <!--                        </select>-->
+        <!--                    </div>-->
+        <!--                    <p></p>-->
+        <!--                    <div class="font_of_menu">You preferences, hobbies, wishes, etc.</div>-->
+        <!--                    <div class="input">-->
+        <!--                        <input type="text" name="your_preferences" placeholder="I have a long TOKILL list..."-->
+        <!--                               class="input_username"/>-->
+        <!--                    </div>-->
+        <!--                    <input type="submit" class="save" value="Save"/>-->
+        <!--                </form>-->
     </div>
 </div>
 </body>
