--- a/WD_PS2/Table_task/index.html
+++ b/WD_PS2/Table_task/index.html
@@ -6,19 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Table task</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.min.css">
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<section class="container">
+<section class="container" style="margin-top: 2rem">
     <h2 class="title is-2">PS2 JS+RegExp</h2>
     <h4 class="subtitle is-4">Table task</h4>
-    <nav class="panel">
+    <nav class="panel" style="width: 600px;">
         <p class="panel-heading">
             Customer's Bill
         </p>
         <div class="panel-block">
-            <div class="field-is-horizontal">
+            <div class="field is-horizontal" style="width: 100%">
                 <div class="field-body">
                     <div class="field">
                         <p class="control">
@@ -27,8 +25,8 @@
                     </div>
                     <div class="field">
                         <p class="control">
-                        <div class="select">
-                            <select placeholder="Filter by category" class="select-filter">
+                        <div class="select" style="width: 100%">
+                            <select placeholder="Filter by category" style="width: 100%">
                                 <option value="" selected>Filter by category</option>
                                 <option value="supplies">Office supplies</option>
                                 <option value="furniture">Furniture</option>
@@ -41,7 +39,7 @@
             </div>
         </div>
         <div class="panel-block">
-            <table class="table is-striped is-fullwidth">
+            <table class="table is-striped is-fullwidth" id="table">
                 <thead>
                 <tr>
                     <th>Category ▼</th>
