--- a/WD_PS2/Table_task/index.html
+++ b/WD_PS2/Table_task/index.html
@@ -20,17 +20,17 @@
                 <div class="field-body">
                     <div class="field">
                         <p class="control">
-                            <input class="input" type="text" placeholder="Search by name">
+                            <input class="input" id="inputOfSearch" type="text" placeholder="Search by name">
                         </p>
                     </div>
                     <div class="field">
                         <p class="control">
-                        <div class="select" style="width: 100%">
-                            <select placeholder="Filter by category" style="width: 100%">
+                        <div class="select"  style="width: 100%">
+                            <select id="select" placeholder="Filter by category" style="width: 100%">
                                 <option value="" selected>Filter by category</option>
-                                <option value="supplies">Office supplies</option>
-                                <option value="furniture">Furniture</option>
-                                <option value="other">Other</option>
+                                <option value="Office supplies" id="supplies">Office supplies</option>
+                                <option value="Furniture">Furniture</option>
+                                <option value="Other">Other</option>
                             </select>
                         </div>
                         </p>
@@ -42,38 +42,38 @@
             <table class="table is-striped is-fullwidth" id="table">
                 <thead>
                 <tr>
-                    <th>Category ▼</th>
-                    <th>Name ▼</th>
+                    <th id="title-category">Category ▼</th>
+                    <th id="title-name">Name ▼</th>
                     <th>Amount</th>
                     <th>Price</th>
                 </tr>
                 </thead>
-                <tbody>
-                <tr>
-                    <td>Office supplies</td>
-                    <td>Pen</td>
-                    <td>10</td>
-                    <td>2$</td>
-                </tr>
-                <tr>
-                    <td>Furniture</td>
-                    <td>Chair</td>
-                    <td>1</td>
-                    <td>20$</td>
-                </tr>
-                <tr>
-                    <td>Other</td>
-                    <td>Trash bin</td>
-                    <td>1</td>
-                    <td>5$</td>
-                </tr>
-                </tbody>
+<!--                <tbody>-->
+<!--                <tr>-->
+<!--                    <td>Office supplies</td>-->
+<!--                    <td>Pen</td>-->
+<!--                    <td>10</td>-->
+<!--                    <td>2$</td>-->
+<!--                </tr>-->
+<!--                <tr>-->
+<!--                    <td>Furniture</td>-->
+<!--                    <td>Chair</td>-->
+<!--                    <td>1</td>-->
+<!--                    <td>20$</td>-->
+<!--                </tr>-->
+<!--                <tr>-->
+<!--                    <td>Other</td>-->
+<!--                    <td>Trash bin</td>-->
+<!--                    <td>1</td>-->
+<!--                    <td>5$</td>-->
+<!--                </tr>-->
+<!--                </tbody>-->
                 <tfoot>
                 <tr>
                     <th></th>
                     <th></th>
                     <th>Total:</th>
-                    <th>45$</th>
+                    <th id="total"></th>
                 </tr>
                 </tfoot>
             </table>
