--- a/WD_PS1/Task2/index.html
+++ b/WD_PS1/Task2/index.html
@@ -7,11 +7,13 @@
     <title>Task2</title>
 </head>
 <body>
+<div class="wrapper">
 <div class="header">HEADER</div>
-<section class="content">
-    <div class="column">MENU</div>
-    <div class="column">CONTENT</div>
-</section>
+    <section class="content">
+        <div class="column">MENU</div>
+        <div class="column">CONTENT</div>
+    </section>
 <div class="footer">FOOTER</div>
+</div>
 </body>
 </html>
