--- a/WD_PS2/Table_task/index.html
+++ b/WD_PS2/Table_task/index.html
@@ -25,7 +25,7 @@
                     </div>
                     <div class="field">
                         <p class="control">
-                        <div class="select"  style="width: 100%">
+                        <div class="select" style="width: 100%">
                             <select id="select" placeholder="Filter by category" style="width: 100%">
                                 <option value="" selected>Filter by category</option>
                                 <option value="Office supplies" id="supplies">Office supplies</option>
@@ -42,32 +42,12 @@
             <table class="table is-striped is-fullwidth" id="table">
                 <thead>
                 <tr>
-                    <th id="title-category">Category ▼</th>
-                    <th id="title-name">Name ▼</th>
+                    <th id="title-category">Category</th>
+                    <th id="title-name">Name</th>
                     <th>Amount</th>
                     <th>Price</th>
                 </tr>
                 </thead>
-<!--                <tbody>-->
-<!--                <tr>-->
-<!--                    <td>Office supplies</td>-->
-<!--                    <td>Pen</td>-->
-<!--                    <td>10</td>-->
-<!--                    <td>2$</td>-->
-<!--                </tr>-->
-<!--                <tr>-->
-<!--                    <td>Furniture</td>-->
-<!--                    <td>Chair</td>-->
-<!--                    <td>1</td>-->
-<!--                    <td>20$</td>-->
-<!--                </tr>-->
-<!--                <tr>-->
-<!--                    <td>Other</td>-->
-<!--                    <td>Trash bin</td>-->
-<!--                    <td>1</td>-->
-<!--                    <td>5$</td>-->
-<!--                </tr>-->
-<!--                </tbody>-->
                 <tfoot>
                 <tr>
                     <th></th>
