--- a/WD_PS1/Task3/index.html
+++ b/WD_PS1/Task3/index.html
@@ -11,7 +11,7 @@
 <body>
 <div class="wrapper">
     <div class="header">
-        <div class="column_left">
+        <div class="column-left">
             <span><b>N</b><strong>++</strong></span>
         </div>
         <div class="column_Right">
@@ -25,77 +25,90 @@
         </div>
     </div>
     <section class="content">
-        <div class="content_top" id="tab1">
-            <div class="column_left">
+        <div class="content-top" id="tab1">
+            <div class="column-left">
                 <img src="img/phone_for_task3.png" alt="image of phone" class="image"></div>
-            <div class="column_right">
+            <div class="column-right">
                 <div><span><a href="#"
-                              class="top_content_header"><b> Our awesome app is ready to use!</b></a></span>
+                              class="content-top-header"><b> Our awesome app is ready to use!</b></a></span>
                 </div>
-                <div><span><a href="#" class="top_content"> Loren ipsum dolor sit amet, consectetur adipisicing elit. Pariatur vero
+                <div><span><a href="#" class="top-content"> Loren ipsum dolor sit amet, consectetur adipisicing elit. Pariatur vero
             laboriosam adipisci dolores aut blanditiis neccesitatibus invertore, eius fuga porro recusandae
             sint quis aliquam nam iure nihil beatae, atque quod!</a></span></div>
-                <button class="buy_now" type="submit">Buy now!</button>
+                <button class="button-buy-now" type="submit">Buy now!</button>
             </div>
         </div>
-        <div class="content_center" id="tab2">
+        <div class="content-center" id="tab2">
             <div class="column">
                 <i class="fa fa-code fa-5x"></i>
-                <p><a href="#" class="content_header">
+                <p><a href="#" class="content-header">
                     <b> Web development</b></a></p>
-                <span><a href="#" class="column_content">
+                <span><a href="#" class="column-content">
                     Loren ipsum dolor sit amet, consectetur adipisicing elit. Nobis nostrum
                 suscipit vel ipsa fugiat tempore molestiae error autem architecto eum, natus, voluplatum
                 eos commodi debitis, expedita pariatur recusandae temporibus voluplatibus!</a> </span>
             </div>
             <div class="column">
                 <i class="fa fa-android fa-5x"></i>
-                <p><a href="#" class="content_header">
+                <p><a href="#" class="content-header">
                     <b> Mobile development</b></a></p>
-                <span><a href="#" class="column_content">
+                <span><a href="#" class="column-content">
                     Loren ipsum dolor sit amet, consectetur adipisicing elit. Nobis nostrum
                 suscipit vel ipsa fugiat tempore molestiae error autem architecto eum, natus, voluplatum
                 eos commodi debitis, expedita pariatur recusandae temporibus voluplatibus!</a> </span>
             </div>
             <div class="column">
                 <i class="fa fa-cloud fa-5x"></i>
-                <p><a href="#" class="content_header">
+                <p><a href="#" class="content-header">
                     <b> Hightload</b></a></p>
-                <span><a href="#" class="column_content">
+                <span><a href="#" class="column-content">
                     Loren ipsum dolor sit amet, consectetur adipisicing elit. Nobis nostrum
                 suscipit vel ipsa fugiat tempore molestiae error autem architecto eum, natus, voluplatum
                 eos commodi debitis, expedita pariatur recusandae temporibus voluplatibus!</a> </span>
             </div>
         </div>
-        <div class="content_bottom" id="tab3">
-            <div class="form_question">
-                <form class="feedback_form">
+        <div class="content-bottom" id="tab3">
+            <div class="form-question">
+                <form class="feedback-form">
                     <label for="name"><b>Contact us!</b></label>
-                    <input type="text" id="name" name="name" placeholder="Type here your name, please" class="myInput">
-                    <input type="email" name="email" placeholder="Type here your email, please" class="myInput">
-                    <input type="tel" name="phone" placeholder="Type here your phone, please" class="myInput">
+                    <input type="text" id="name" name="name" placeholder="Type here your name, please" class="my-input">
+                    <input type="email" name="email" placeholder="Type here your email, please" class="my-input">
+                    <input type="tel" name="phone" placeholder="Type here your phone, please" class="my-input">
                     <textarea name="question" placeholder="Ask your question" class="myQuestion"></textarea>
-                    <div class="checkbox">
-                        <input type="checkbox" id="bot" name="I am not a bot" value="">
-                        <label for="bot">I am not a bot</label>
-                    </div>
+                    <label for="input-file" class="label">Enter a file about you, for example a resume</label>
+                    <input type="file" id="input-file" name="file" class="my-input">
                     <label for="date-of-birth" class="label">Enter your date of birth</label>
-                    <input type="date" id="date-of-birth" class="myInput">
+                    <input type="date" id="date-of-birth" class="my-input">
                     <label for="color" class="label">Choose your color</label>
-                    <input type="color" id="color" name="color" value="#555" class="myInput">
+                    <input type="color" id="color" name="color" value="#555" class="my-input">
                     <label for="number" class="label">Select your favorite number</label>
-                    <input type="number" id="number" placeholder="number" class="myInput">
+                    <input type="number" id="number" placeholder="number" class="my-input">
                     <label for="range" class="label">Choose other number from 0 to 20 via slider</label>
-                    <input type="range" id="range" class="myInput">
+                    <input type="range" id="range" class="my-input">
                     <div class="my-gender">
                         <p>Who are you?</p>
                         <input type="radio" name="gender" value="male"> Male <br>
                         <input type="radio" name="gender" value="female"> Female <br>
                     </div>
+                    <label for="month" class="label">Indicate the desired date for the interview</label>
+                    <input type="month" id="month" placeholder="month" class="my-input">
+                    <input type="week" placeholder="week" class="my-input">
+                    <input type="time" placeholder="time" class="my-input">
+                    <input type="number" placeholder="day of the month" min="0" max="31" class="my-input">
+                    <label for="password" class="label">Please, input your password.</label>
+                    <input type="password" id="password" placeholder="password" class="my-input">
+                    <input type="search" placeholder="Search in Google" class="my-input">
+                    <label for="url" class="label">Add your homepage:</label>
+                    <input type="url" id="url" placeholder="homepage" class="my-input">
+                    <input type="image" src="img/logo-inst.png" alt="Logo instagramm" class="image-logo">
+                    <div class="checkbox">
+                        <input type="checkbox" id="bot" name="I am not a bot" value="">
+                        <label for="bot">I am not a bot</label>
+                    </div>
                     <div class="block-buttons">
                         <input class="buttons" type="reset" name="reset" value="reset you info">
                         <input class="buttons" type="submit" value="Send email!">
-<!--                        <input type="hidden" name="hidden" value="xxx">-->
+                        <input type="hidden" name="hidden" value="hidden">
                     </div>
 
                 </form>
