--- a/WD_PS2/Table_task/index.html
+++ b/WD_PS2/Table_task/index.html
@@ -20,7 +20,7 @@
                 <div class="field-body">
                     <div class="field">
                         <p class="control">
-                            <input class="input" id="inputOfSearch" type="text" placeholder="Search by name">
+                            <input class="input-email" id="inputOfSearch" type="text" placeholder="Search by name">
                         </p>
                     </div>
                     <div class="field">
