wd_ps2 task3-task4 fixed problems after checked O.Polevin, inputs associaded with label

--- a/WD_PS2/Task3/index.html
+++ b/WD_PS2/Task3/index.html
@@ -10,9 +10,11 @@
 <div class="container">
     <h1 class="title">time calculation</h1>
     <h3 class="title_of_input">enter first time in format hh:mm:ss</h3>
-    <input type="datetime-local" name="first_time" placeholder="enter first time in format hh:mm:ss" class="my_input">
+    <input type="datetime-local" name="first_time" placeholder="enter first time in format hh:mm:ss" class="my_input"
+           step="1">
     <h3 class="title_of_input">enter second time in format hh:mm:ss</h3>
-    <input type="datetime-local" name="second_time" placeholder="enter second time in format hh:mm:ss" class="my_input">
+    <input type="datetime-local" name="second_time" placeholder="enter second time in format hh:mm:ss" class="my_input"
+           step="1">
     <h2 class="answer">time passed between two dates</h2>
     <input class="button_calculate" type="submit" value="Calculate!">
     <p class="result"></p>
