wd_ps2 task 2 fixed

--- a/WD_PS2/Task2/index.html
+++ b/WD_PS2/Task2/index.html
@@ -18,7 +18,7 @@
     <input class="my_input" id="secondInput" name="time_in_hours" placeholder="enter time in format hh:mm:ss"
                                             type="time" step="1">
     <input class="button_calculate" id="button_second" type="submit" value="Calculate!">
-    <h2 class="answer">time in seconds is</h2>
+    <h2 class="answer"></h2>
     <p id="secondResult" class="result"></p>
 </div>
 <script src="js/calc.js"></script>
