--- a/WD_PS2/Table_task/index.html
+++ b/WD_PS2/Table_task/index.html
@@ -5,28 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Table task</title>
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.min.css">
 </head>
 <body>
-<section class="container" style="margin-top: 2rem">
+<section class="container">
     <h2 class="title is-2">PS2 JS+RegExp</h2>
     <h4 class="subtitle is-4">Table task</h4>
-    <nav class="panel" style="width: 600px;">
+    <nav class="panel">
         <p class="panel-heading">
             Customer's Bill
         </p>
         <div class="panel-block">
-            <div class="field is-horizontal" style="width: 100%">
+            <div class="field is-horizontal">
                 <div class="field-body">
                     <div class="field">
                         <p class="control">
-                            <input class="input-email" id="inputOfSearch" type="text" placeholder="Search by name">
+                            <input class="input" id="inputOfSearch" type="text" placeholder="Search by name">
                         </p>
                     </div>
                     <div class="field">
                         <p class="control">
-                        <div class="select" style="width: 100%">
-                            <select id="select" placeholder="Filter by category" style="width: 100%">
+                        <div class="select">
+                            <select id="select" placeholder="Filter by category">
                                 <option value="" selected>Filter by category</option>
                                 <option value="Office supplies" id="supplies">Office supplies</option>
                                 <option value="Furniture">Furniture</option>
