--- a/WD_PS2/Task4/index.html
+++ b/WD_PS2/Task4/index.html
@@ -11,7 +11,7 @@
 <div class="container">
     <h1 class="title">Chessboard</h1>
     <label for="chessboard_size" class="title_of_input">enter the size of the chessboard in the format 8x8</label>
-    <input type="text" id="chessboard_size" placeholder="enter the size of the chessboard" class="my_input">
+    <input type="text" id="chessboard_size" placeholder="enter checkerboard size" class="my_input">
     <input class="button_bild" type="submit" value="Bild Chessboard!">
     <canvas class="chessboard"></canvas>
 </div>
