wd_ps2 task2 deleted duplicate const, changed <input... type="text">

--- a/WD_PS2/Task2/index.html
+++ b/WD_PS2/Task2/index.html
@@ -16,7 +16,7 @@
     <p id="firstResult" class="result"></p>
     <label for="secondInput" class="title_of_input">enter time in format hh:mm:ss</label>
     <input class="my_input" id="secondInput" name="time_in_hours" placeholder="enter time in format hh:mm:ss"
-                                            type="time" step="1">
+           type="text">
     <input class="button_calculate" id="button_second" type="submit" value="Calculate!">
     <h2 class="answer"></h2>
     <p id="secondResult" class="result"></p>
