wd_ps2 task5 changed regular for url, added label for input, spaces removed

--- a/WD_PS2/Task5/index.html
+++ b/WD_PS2/Task5/index.html
@@ -10,8 +10,8 @@
 <body>
 <div class="container">
     <h1 class="title">LINKS AND IP-ADDRESSES</h1>
-    <h3 class="title_of_input">Enter links and IP-addresses </h3>
-    <textarea name="link_and_ip" placeholder="enter links and IP-adreses" class="link_and_ip"></textarea>
+    <label for="link_and_ip" class="title_of_input">Enter links and IP-addresses</label>
+    <textarea id="link_and_ip" placeholder="enter links and IP-adreses" class="link_and_ip"></textarea>
     <p class="result"></p>
 </div>
 <script src="js/checkText.js"></script>
