wd_ps2 table-task deleted const COLUMN_IN_TABLE, wd_ps3 initial stage of writing of custom_select

--- a/WD_PS2/Table_task/index.html
+++ b/WD_PS2/Table_task/index.html
@@ -50,6 +50,8 @@
                     <th>Price</th>
                 </tr>
                 </thead>
+                <tbody id="table-body">
+                </tbody>
                 <tfoot>
                 <tr>
                     <th></th>
