wd_ps3 fixed after first review

--- a/WD_PS3/Landing/index.html
+++ b/WD_PS3/Landing/index.html
@@ -43,28 +43,28 @@
                 <i class="fa fa-code fa-5x"></i>
                 <p><a href="#" class="content-header">
                     <b> Web development</b></a></p>
-                <span><a href="#" class="column-content">
+                <span class="column-content">
                     Loren ipsum dolor sit amet, consectetur adipisicing elit. Nobis nostrum
                 suscipit vel ipsa fugiat tempore molestiae error autem architecto eum, natus, voluplatum
-                eos commodi debitis, expedita pariatur recusandae temporibus voluplatibus!</a> </span>
+                eos commodi debitis, expedita pariatur recusandae temporibus voluplatibus! </span>
             </div>
             <div class="column">
                 <i class="fa fa-android fa-5x"></i>
                 <p><a href="#" class="content-header">
                     <b> Mobile development</b></a></p>
-                <span><a href="#" class="column-content">
+                <span class="column-content">
                     Loren ipsum dolor sit amet, consectetur adipisicing elit. Nobis nostrum
                 suscipit vel ipsa fugiat tempore molestiae error autem architecto eum, natus, voluplatum
-                eos commodi debitis, expedita pariatur recusandae temporibus voluplatibus!</a> </span>
+                eos commodi debitis, expedita pariatur recusandae temporibus voluplatibus! </span>
             </div>
             <div class="column">
                 <i class="fa fa-cloud fa-5x"></i>
                 <p><a href="#" class="content-header">
                     <b> Hightload</b></a></p>
-                <span><a href="#" class="column-content">
+                <span class="column-content">
                     Loren ipsum dolor sit amet, consectetur adipisicing elit. Nobis nostrum
                 suscipit vel ipsa fugiat tempore molestiae error autem architecto eum, natus, voluplatum
-                eos commodi debitis, expedita pariatur recusandae temporibus voluplatibus!</a> </span>
+                eos commodi debitis, expedita pariatur recusandae temporibus voluplatibus! </span>
             </div>
         </div>
         <div class="content-bottom" id="tab3">
@@ -110,7 +110,6 @@
                         <input class="buttons" type="submit" value="Send email!">
                         <input type="hidden" name="hidden" value="hidden">
                     </div>
-
                 </form>
             </div>
         </div>
