--- a/WD_PS3/Select/index.html
+++ b/WD_PS3/Select/index.html
@@ -9,7 +9,8 @@
 <h1>My Select</h1>
 <div class="wrapper">
     <section id="dropdown" class="dropdown">
-        <div id="select" class="select closed"><p>Select Home ▼</p></div>
+        <div id="select" class="select closed"><p>Select Home</p></div>
+        <span id="triangle">▼</span>
     </section>
 </div>
 <script src="js/jquery-3.4.1.js"></script>
