--- a/WD_ST1.5/slider-template.html
+++ b/WD_ST1.5/slider-template.html
@@ -14,7 +14,8 @@
         <ul class="slider-previews"></ul>
     </div>
 </section>
-<script src="script/jquery-3.4.1.js"></script>
+<script src="https://code.jquery.com/jquery-3.4.1.min.js"
+        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 <script src="script/slider-template.js"></script>
 </body>
 </html>
